--- a/cobertura.html
+++ b/cobertura.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=g, initial-scale=1.0" />
     <title>cobertura</title>
-    <link rel="stylesheet" href="estilospagina.css" />
+    <link rel="stylesheet" href="style.css" />
     <!--fav icon-->
     <link rel="shortcut icon"  href="imagenes/Cajita.png" type="image/x-icon">
     <link
