--- a/quienessomos.html
+++ b/quienessomos.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>somos logistica "la veloz"</title>
-    <link rel="stylesheet" href="estilospagina.css" />
+    <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
@@ -91,9 +91,9 @@
     
     <section class="div-quienessomos">
 
-      <h1 id="h1-quienessomos">lo que te gustaria saver de nosotros</h1>
+      <h1 class="tituloquienessomos">lo que te gustaria saver de nosotros</h1>
       <br>
-      <h2 class="h2-quienessomos">mision</h2>
+      <h2 class="tituloquienessomos">mision</h2>
       <div>
         <p class="cuerpo1--parrafo">
           nuestra <strong>mensajeria en moto </strong> esta pensada para
@@ -105,7 +105,7 @@
       </div>
 
       <div>
-        <h2 class="h2-quienessomos">vision</h2>
+        <h2 class="tituloquienessomos">vision</h2>
         <p class="cuerpo1--parrafo">
           aspiramos a ser reconocidos como principales proveedores de servicios
           externos de <strong>mensajeria</strong>. simplificamos la cadena
@@ -126,7 +126,7 @@
         dentro de nuestro catalogo
       </p>
       
-      <h3 class="h2-quienessomos">ofrecemos entre otros los siguientes servicios :</h3>
+      <h3 class="titulo-quinesosmos">ofrecemos entre otros los siguientes servicios :</h3>
       <div class="cuerpo1--parrafo">
       <li>-entregade de documentacion</li>
       <li>-envios y licitaciones , presentes empresariales , regalos ,etc.</li>
