--- a/servicios.html
+++ b/servicios.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>servicios</title>
-    <link rel="stylesheet" href="estilospagina.css" />
+    <link rel="stylesheet" href="style.css" />
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
@@ -73,7 +73,7 @@
 <section class="contenidoservicios">
 
  
-  <div class="imagen-quienessomos"> <video src="./videos/production ID_4440948.mp4" control loop autoplay></video>  </div> 
+  <div class="imagen-quienessomos"> <video  src="./videos/production ID_4440948.mp4" control loop autoplay></video>  </div> 
 <div class="parrafos1">
     <h2 class="titulo--grande"> logistica</h2>
     <h4 class="cuerpo1--parrafo">nuestro servicio de logistica esta pensado para los tramites cotidianos que no requieren la urgencia ni exclusividad del sistema de mensajeria la veloz.</h4>
