cambio meta name

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <meta name="description" content="laveloz logistica urbana mensajeria en moto cadeteria paqueteria mercado flex mercado libre envios rapidos envios seguros abel bazan">
+    <meta name="keywords" content="laveloz logistica urbana mensajeria en moto cadeteria paqueteria mercado flex mercado libre envios rapidos envios seguros abel bazan"> 
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
@@ -185,9 +187,7 @@
       <div class="piedepagina">
         <h4>creado por abel bazan</h4>
         <p class="final--cuerpo">
-          mensajeria la veloz - mensajeria en moto y cadeteria . mensajeria en
-          capital federal y gran buenos aires ,envios en moto . motomensajeria .
-          logistica
+          laveloz logistica urbana mensajeria en moto cadeteria paqueteria mercado flex mercado libre envios rapidos envios seguros abel bazan
         </p>
       </div>
     </footer>
