--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
   />
+  
   <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
    
@@ -142,7 +143,9 @@
     </section>
     <!--aca comienza el pie de pagina-->
     <article class="tarjeta inicio--responsabilidad conteiner">
-    <footer class="logitos ">
+   <style>
+
+      <footer class="logitos ">
  
       <DIV class="contacto-pie btn-neon">
         <h2>nosotros</h2>
