padding en formulario

--- a/contacto.html
+++ b/contacto.html
@@ -76,8 +76,9 @@
 </div>
     
     <!--aqui comienza el formulario-->
-    
-    <section class="contactor primary">
+ <div class="p-5">
+   <h1>formulario</h1>
+    <section class="contactor primary ">
       <form action="/action_page.php">
         <div class="mb-3 mt-3">
           <div class="col-md-2">
@@ -131,6 +132,7 @@
 
     </form>
   </section>
+</div>
   <!--aca comienza el pie de pagina-->
   
   <article class="tarjeta inicio--responsabilidad tarjetas">
