cambio en la nav agregando imagen

--- a/quienessomos.html
+++ b/quienessomos.html
@@ -67,7 +67,7 @@
   </div>
     <article class="logitos">
     <div class="contacto-pie btn-neon">
-      <img src="./imagenes/certificado.png" alt="" class="imagen-exp">
+      <img src="./imagenes/experiencia.png" alt="" class="imagen-exp">
       <h2 class="titulo-quienessomos">experiencia</h2>
       <p>Nuestro equipo de profesionales con una amplia experiencia en el rubro de mensajería en moto y cadetería en moto.</p>
     
@@ -82,7 +82,7 @@
     </div>
  
 <div class="contacto-pie btn-neon">
-<img src="./imagenes/money.png" alt="">
+<img src="./imagenes/logitos costos.png" alt="">
 <h2 class="titulo-quienessomos">mejores costos</h2>
 <p>La mejor cobertura para su empresa. Menores costos totales para su empresa en el seguimiento y control de sus trámites.</p>
 </div>
